<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.whitelabelexample.ui.loyalty.nocard.NoCardViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:clipChildren="false"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="26dp"
                android:paddingEnd="16dp">

                <TextView
                    android:id="@+id/no_card_phone_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Medium.Tertiary.21"
                    app:rationaleResId="@{viewModel.rationaleMsgResId}"
                    app:userId="@{viewModel.userIdData}"
                    tools:text="К номеру +7 962 043-23-43 не привязано ни одной карты" />

                <ImageView
                    android:id="@+id/no_card_brand_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/brand_card_short" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/no_card_attach_card_text"
                    android:textAppearance="@style/Medium.Tertiary.16" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/no_card_bind_plastic_button"
                    style="@style/ColoredButton"
                    android:layout_width="match_parent"
                    android:layout_marginTop="12dp"
                    android:onClick="@{(v)->viewModel.onBindCardClick()}"
                    android:text="@string/attach_card_button_text"
                    app:isVisible="@{viewModel.isShowBindPlasticButton}" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/no_card_get_virtual_button"
                    style="@style/ColoredButton"
                    android:layout_width="match_parent"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="24dp"
                    android:onClick="@{(v)->viewModel.onGetVirtualCardClick()}"
                    android:text="@string/get_card_button_text"
                    app:isVisible="@{viewModel.isShowGetVirtualButton}" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</layout>
